<resources>
    <string name="app_name">MyMovie2019</string>
    <string name="title_list_movie">Movies</string>
    <string name="title_tv_show">TvShows</string>
    <string name="title_list_cast">Casts</string>
    <string name="title_see_all">See all</string>
    <string name="title_latest">Latest</string>
    <string name="title_list_categories">Categories</string>
    <string name="title_network_error">Network not available!</string>
    <string name="title_retry">Retry</string>
    <string name="title_search_movie">Search Movie</string>
    <string name="title_cast_list">Casts</string>
    <string name="title_detail">Detail</string>
    <string name="title_original">Original title: </string>
    <string name="title_status">Status:</string>
    <string name="title_runtime">Runtime:</string>
    <string name="title_categories">Categories:</string>
    <string name="title_premiere">Premiere:</string>
    <string name="title_budget">Budget</string>
    <string name="title_revenue">Revenue:</string>
    <string name="title_homepage">Homepage:</string>
    <string name="title_watch">WATCH</string>
    <string name="title_result">Result</string>
    <string name="title_movie_detail">MovieDetail</string>
    <string name="image_movie_transition_name">image_movie</string>
    <string name="text_movie_name_transition">text_movie_name</string>
    <string name="text_release_date_transition">text_release_date</string>
    <string name="title_tab_information">INFO</string>
    <string name="title_tab_video">VIDEOS</string>
    <string name="title_tab_similar">SIMILAR</string>
    <string name="text_name_cast_transition">cast_name</string>
    <string name="text_image_cast_transition">cast_image</string>
    <string name="error_network_call">Error network call</string>
    <string name="error_time_out">Timeout! Cannot connect to server</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_seasons">Seasons</string>
    <string name="title_about">About</string>
    <string name="title_on_the_air">On The Air</string>
</resources>
